Sat Oct  2 14:36:21 1999  Tim Janik  <timj@gtk.org>

	* plug-ins/common/csource.c: removed cruft (old test code)
	(run): commented config structure initialization.
	(save_image): put only the file's basename into the C comment.
	feature saving of macros instead of a plain structure, so the
	data can be used for third party structure initialization.

1999-10-01  Kelly Lynn Martin  <kelly@poverty.bloomington.in.us>

	* po/it.po po-plug-ins/it.po plug-ins/perl/po/it.po
	tips/gimp_tips.it.txt: Update for the it locale from Daniele Medri 
	<madrid@linux.it>

Fri Oct  1 19:05:04 EDT 1999  Austin Donnelly  <austin@gimp.org>

	* app/gimpimage.c: Factored out common code from 
	    gimp_image_{raise,lower}_layer and
	    gimp_image_{raise_layer_to_top,lower_layer_to_bottom}.  They
	    now call gimp_image_position_layer() to do the real work.
	* app/gimpimage.h: gimp_image_position_layer() takes extra arg to
	    tell whether an undo should be pushed.
	* app/layers_dialog.c: reposition layer with undo.
	* app/undo.c: new undo type for layer reposition.  Layer rename
	    shouldn't dirty and clean the image twice!
	* app/undo.h: prototype for undo_push_layer_reposition().
	* app/undo_types.h: LAYER_REPOSITION_UNDO type.

Fri Oct  1 15:18:34 EDT 1999  Austin Donnelly  <austin@gimp.org>

	* app/channel.h: don't want sub-undo type
	* app/gimpimage.c: undo_push_channel() takes ADD or REMOVE type
	* app/undo.c: undo_push_channel() takes type.  More specific
	    CHANNEL_{ADD,REMOVE}_UNDO types.
	* app/undo.h: undo_push_channel() prototype.
	* app/undo_types.h: More specific CHANNEL_{ADD,REMOVE}_UNDO types.

Fri Oct  1 12:46:12 EDT 1999  Austin Donnelly  <austin@gimp.org>

	* gimprc.in: comment typo fix, plus add %D* to default
	    image-title-format string, so people get a '*' in the titlebar
	    if their image is dirty.
	* app/fileops.c: initialise filename before using it.
	* app/gdisplay.c: empty parameter list () is K&R - should be
	    stronger (void) in ANSI C.