@@ -1,3 +1,9 @@
+Mon Sep 20 18:58:38 BST 1999 Nick Lamb <njl195@zepler.org>
+
+	* plug-ins/common/png.c: Now PNGs with colormaps and tRNS
+	(ie transparency info) load properly. Still convert to RGB for
+	the best results. Save support is TODO
+
 Sat Oct  2 14:36:21 1999  Tim Janik  <timj@gtk.org>
 
 	* plug-ins/common/csource.c: removed cruft (old test code)
